# gvisor-based-python-repl

./: README.md  TEST_OUTPUT.md  run.sh  server.py  technical_blog.md  test.sh  test_concurrent_clients.py  test_tcp.py  test_ws.py  test_ws.sh
basic_impl/: README.md  TEST_OUTPUT.md  plan.md  prompt.md  run_with_session_snapshots.sh  scratchpad.md  server.py  test_timeouts.py
forevervm_minimal/: .gitignore  README.md  __init__.py  component_factory.py  config.py  custom_serializer.py  http_server.py  main.py  pyproject.toml  run.sh  scratchpad.md  session_data.py  session_manager.py  snapshot_storage.py  task_manager.py  test.sh  test_client.py  test_client_concurrent.py  worker.py  worker_manager.py
mcp-proxy/: Cargo.toml
mcp-proxy/src/: handlers.rs  main.rs  mcp.rs  python_client.rs
