[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bytes = "1.5.0"
thiserror = "1.0.50"
anyhow = "1.0.75"
uuid = { version = "1.6.1", features = ["v4", "serde"] }